--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "description": "Boilerplate project for building websites on the HubSpot CMS",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src && prettier --list-different 'src/**/*.js' 'src/**/*.json'",
+    "prettier:write": "prettier --write 'src/**/*.js' 'src/**/*.json'"
   },
   "repository": {
     "type": "git",
@@ -12,13 +13,9 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@hubspot/cms-cli": "0.0.25",
+    "@hubspot/cms-cli": "^1.0.1",
     "eslint": "^6.3.0",
     "js-yaml": "^3.13.1",
     "prettier": "^1.18.2"
-  },
-  "scripts": {
-    "lint": "eslint src && prettier --list-different 'src/**/*.js' 'src/**/*.json'",
-    "prettier:write": "prettier --write 'src/**/*.js' 'src/**/*.json'"
   }
 }
