--- a/.blazar.yaml
+++ b/.blazar.yaml
@@ -9,6 +9,11 @@ buildpack:
   branch: master
 
 before:
+  - description: Install dependencies
+    commands:
+      - curl --silent https://hubspot-3rdparty-packages.s3.amazonaws.com/prod/bpx/bpx-blazar-0.1.10.tgz | tar xz -C /opt/build-deps/hs-build-tools/bin
+      - ./bin/activate
+
   - description: Lint the files
     commands:
       - prod-lint
