--- a/.blazar.yaml
+++ b/.blazar.yaml
@@ -8,4 +8,4 @@ before:
   - description: Copies assets in the src directory to an @hubspot/sprout directory
     commands:
       - mkdir -p @hubspot/sprout
-      - cp -rv src/* @hubspot/sprout
+      - cp -rv src/. @hubspot/sprout
