--- a/hubspot.deploy/cms-sprout-theme.yaml
+++ b/hubspot.deploy/cms-sprout-theme.yaml
@@ -1,4 +1,4 @@
-name: cms-website-theme
+name: cms-sprout-theme
 
 team: hs-content-assets
 
@@ -7,11 +7,11 @@ contributors:
 
 type: static_deployed_pointer
 
-description: Vast 2.0 AKA Sprout Theme
+description: Sprout Theme
 
 artifactBuildMetadata:
-  repository: cms-website-theme
-  module: cms-website-theme
+  repository: cms-sprout-theme
+  module: cms-sprout-theme
 
 slack:
   - channelName: "#cms-assets-io-notif"
