--- a/.blazar.yaml
+++ b/.blazar.yaml
@@ -8,4 +8,5 @@ before:
   - description: Copies assets in the src directory to an @hubspot/sprout directory
     commands:
       - mkdir -p @hubspot/sprout
+      - cp cms-deploy.yaml @hubspot/cms-deploy.yaml
       - cp -rv src/. @hubspot/sprout
