--- a/hubspot.deploy/cms-sprout-theme-v1.yaml
+++ b/hubspot.deploy/cms-sprout-theme-v1.yaml
@@ -10,6 +10,7 @@ description: Sprout Theme
 artifactBuildMetadata:
   repository: cms-sprout-theme
   module: cms-sprout-theme
+  branch: major_version_1
 
 slack:
   - channelName: "#cms-assets-io-notif"
@@ -21,4 +22,4 @@ slack:
       deployedNotRun: MUTE
 
 qaAutoDeployedBranches:
-- master
+- major_version_1
