--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "@hubspot/cms-cli": "^1.0.9-beta.5"
+    "@hubspot/cms-cli": "^1.0.9"
   }
 }
